# kinto-http.rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.rst  kinto.ini  rustfmt.toml
examples/: hello_world.rs  permissions.rs
src/: batch.rs  bucket.rs  client.rs  collection.rs  error.rs  lib.rs  main.rs  paths.rs  record.rs  request.rs  resource.rs  response.rs  utils.rs
tests/: lib.rs
