[package]
name = "kinto_http"
description = "Rust HTTP client for the Kinto storage service."
version = "0.1.0"
authors = ["Storage Team <storage-team@mozilla.com>"]
license = "Apache-2.0"


[dependencies]
hyper = "0.10"
hyper-native-tls = "0.2"
json = "0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
